[project]
name = "spatiallm"
version = "0.1.1"
description = "SpatialLM: Training Large Language Models for Structured Indoor Modeling"
authors = [{ name = "ManyCore Research Team" }]
requires-python = ">=3.10,<=3.12"
readme = "README.md"
license = "LicenseRef-Llama3.2"
dependencies = [
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
    "transformers>=4.41.2,<4.53",
    "safetensors>=0.4.5",
    "pandas>=2.2.3",
    "einops>=0.8.1",
    "numpy>=1.26,<2",
    "scipy>=1.15.2",
    "scikit-learn>=1.6.1",
    "toml>=0.10.2,<0.11",
    "tokenizers>=0.19.0",
    "huggingface_hub>=0.25.0",
    "rerun-sdk>=0.21.0",
    "shapely>=2.0.7",
    "bbox>=0.9.4",
    "terminaltables>=3.1.10",
    "open3d>=0.18.0",
    "nvidia-cudnn-cu12",
    "nvidia-nccl-cu12",
    "poethepoet[poetry-plugin]>=0.33.1",
    "addict>=2.4.0",
]

[tool.uv]
no-build-isolation-package = ["torch", "torchvision", "torchaudio"]

[tool.poe.tasks]
install-torchsparse = "pip install git+https://github.com/mit-han-lab/torchsparse.git"
install-flash-attn = "pip install ninja flash-attn --no-build-isolation"
install-torch-scatter = "pip install torch-scatter -f https://data.pyg.org/whl/torch-2.4.0+cu124.html"
install-spconv = "pip install timm spconv-cu120"
install-sonata = [
    "install-flash-attn",
    "install-torch-scatter",
    "install-spconv",
]
install-training = "pip install omegaconf datasets<=3.6.0 accelerate<=1.7.0 wandb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
